[squash] fixed minor UI defects

--- a/src/app/components/organisms/latestSec/latestArticleSection.module.css
+++ b/src/app/components/organisms/latestSec/latestArticleSection.module.css
@@ -1,7 +1,6 @@
 .contentContainer {
     width: 100%;
     display: flex;
-    justify-content: space-between;
 }
 
 .header {
